parmap (1.4.0.9000)

  * Feature: Add progress bar to parmap.starmap if tqdm is installed
  * Fix: parmap.starmap_async was not passing the callback properly

 -- Sergio Oller <sergioller@gmail.com>  Sun, 17 Sep 2017 11:26:09 +0200

parmap (1.4.0)

  * Feature: Add progress bar to parmap.map if tqdm is installed

 -- Sergio Oller <sergioller@gmail.com>  Wed, 19 Jul 2017 10:21:00 +0200

parmap (1.3.0)

  * Feature: Add map_async and starmap_async functions (that support multiple arguments)

 -- Sergio Oller <sergioller@gmail.com>  Mon, 30 May 2016 16:07:36 +0200

parmap (1.2.3)

  * Fix: Close pools if needed on exception. Thanks to saddy001 for reporting
    the fix.

 -- Sergio Oller <sergioller@gmail.com>  Sun, 30 Aug 2015 21:36:22 +0200

parmap (1.2.2)

  * Fix: Description in setup.py should be a string, not a tuple. Thanks to
         Sam Spilsbury for pointing that out and submitting the fix.

 -- Sergio Oller <sergioller@gmail.com>  Thu, 23 Apr 2015 08:49:41 +0200

parmap (1.2.1)

  * Fix: Do not close pool in parmap.map and parmap.starmap if pool is
         given as an argument.

 -- Sergio Oller <sergioller@gmail.com>  Fri, 16 May 2014 13:18:58 +0200
parmap (1.2.0)

  * Initial release.

 -- Sergio Oller <sergioller@gmail.com>  Thu, 23 Jan 2014 12:47:46 +0100