@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-from parmap.parmap import map, starmap
+from parmap.parmap import map, starmap, map_async, starmap_async
 
-__all__ = ['map', 'starmap']
+__all__ = ['map', 'starmap', 'map_async', 'starmap_async']
 
